--- a/8.1-rc/alpine3.13/fpm/Dockerfile
+++ b/8.1-rc/alpine3.13/fpm/Dockerfile
@@ -60,9 +60,9 @@ ENV PHP_LDFLAGS="-Wl,-O1 -pie"
 
 ENV GPG_KEYS 528995BFEDFBA7191D46839EF9BA0ADA31CBD89E 39B641343D8C104B2B146DC3F9C39DC0B9698544 F1F692238FBC1666E5A5CCD4199F9DFEF6FFBAFD
 
-ENV PHP_VERSION 8.1.0alpha3
-ENV PHP_URL="https://downloads.php.net/~ramsey/php-8.1.0alpha3.tar.xz" PHP_ASC_URL="https://downloads.php.net/~ramsey/php-8.1.0alpha3.tar.xz.asc"
-ENV PHP_SHA256="cd260d6492649582fbe49ea69ba88d8da844e25f8307c9d9a8b759d65377db93"
+ENV PHP_VERSION 8.1.0beta1
+ENV PHP_URL="https://downloads.php.net/~ramsey/php-8.1.0beta1.tar.xz" PHP_ASC_URL="https://downloads.php.net/~ramsey/php-8.1.0beta1.tar.xz.asc"
+ENV PHP_SHA256="e2b0e50750544754e48dbee298637566f335874b470d5d5a62470bfc70eefe28"
 
 RUN set -eux; \
 	\
